--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -3,4 +3,13 @@
   = text_field_tag :query, params[:query]
   br
   = submit_tag("Find")
-| #{@products}
+
+== yield
+- if @products != [] && params[:query]
+  - for @product in @products
+    = link_to 'Link', product_path(@product.id)
+    p #{@product.title}
+- elsif !params[:query]
+    p Please, enter a search query
+- else
+    p No items found
