--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -10,8 +10,8 @@
     = link_to 'Link', product_path(@product.id)
     p #{@product.title}
     p "THE CURRENT SEARCH RETURNED THE FOLLOWING RECORDS #{@products}"
-    <img src="#{ProductPicture.where(product_id: @product.id).first.file.url}" alt="product_image"> 
-    p "The current value of image is #{ProductPicture.where(product_id: @product.id).first.file.url}"
+    <img src="#{Picture.where(product_id: @product.id).first.file.url}" alt="product_image"> 
+    p "The current value of image is #{Picture.where(product_id: @product.id).first.file.url}"
 - elsif !params[:query]
     p Please, enter a search query
 - else
