--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -9,7 +9,7 @@
   - for @product in @products
     = link_to 'Link', product_path(@product.id)
     <p> #{@product.title} </p>
-    = image_tag("#{@product.pictures.first.file.url}")
+    = image_tag(@product.pictures.first.file.url)
     <p> #{@product.description} </p>
 - elsif !params[:query]
     p Please, enter a search query
