--- a/app/views/start_page/index.html.slim
+++ b/app/views/start_page/index.html.slim
@@ -1,3 +1,3 @@
-H1 StartPage#index
-P Find me in app/views/start_page/index.html.erb
-
+- @categories.each do |category|
+  p
+    = category.inspect
