--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,7 +1,4 @@
-= form_tag(products_path, method: :get)
-  = label_tag(:query, "Enter your search query: ")
-  = text_field_tag :query, params[:query]
-  = submit_tag("Find", class: "btn btn-default")
+
 
 <div class="container-fluid">
   <div class="well well-sm">
@@ -13,15 +10,15 @@
   </div>
  
   <div id="products" class="row list-group">
-    <div class="item  col-xs-4 col-lg-10">
+    <div class="col-xs-4 col-lg-10">
       - if @products.any? 
         - @products.each  do |product|
-            <div class="col-xs-6 col-lg-4">
+            <div class="item col-xs-6 col-lg-4">
               <div class="thumbnail">
                 = image_tag(product.pictures.first.file.url, class: "group list-group-image img-responsive")
                 <div class="caption">
                   <h4 class="group inner list-group-item-heading">
-                    <p> #{product.title} </p> </h4>
+                    <p> #{truncate(product.title, length: 23)} </p> </h4>
                   <p class="group inner list-group-item-text">
                     <p> #{truncate(product.description, length: 50)} </p> </p>
                   <div class="row">
