--- a/app/views/start_page/index.html.slim
+++ b/app/views/start_page/index.html.slim
@@ -1,3 +1,51 @@
+div.row
+  div[id="categories" class="row list-group"]
+    div[class="item  col-xs-1 col-lg-1"]
+      b Categories
+    - @all_categories.each do |category|
+      = link_to(products_path + "/?category_id="+category.id.to_s)
+        div[class="item  col-xs-1 col-lg-1"]
+          div.caption
+              = truncate(category.title, length: 23)
+
+
+
 - @categories.each do |category|
-  p
-    = category.inspect
+  div.row
+
+    div[class="well well-sm"]
+      = link_to(products_path + "/?category_id="+category.id.to_s)
+        strong = category.title
+
+    
+    div[id="products#{category.id.to_s}" class="row list-group"]
+    - Product.where('get_root_category(category_id)='+category.id.to_s).order('RANDOM()').first(4).each do |product|
+      = link_to(product)
+        div[class="item  col-xs-3 col-lg-3"]
+          div.thumbnail
+            = image_tag(product.pictures.first.file.url, alt: product.title, class: "group list-group-image")
+            div.caption
+              h4[class="group inner list-group-item-heading"]
+                = truncate(product.title, length: 23)
+              p[class="group inner list-group-item-text"]
+                = truncate(product.description, length: 50)
+              p[class="group inner list-group-item-text"] 
+                = link_to(vendor_path id:product.vendor.id)
+                  | Product vendor:&nbsp;
+                  br
+                  = product.vendor.title
+              div.row
+                div[class="col-xs-12 col-md-6"]
+                  p.lead $21.000
+                div[class="col-xs-12 col-md-6"]
+                  = link_to(product, class: "btn btn-success")
+                    b Add to cart
+
+
+
+
+
+
+
+    
+      
