Implemented a redirection at the click on the brand name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header"></div>
-        <p class="navbar-brand">
-        BabaExpress </p>
+        <a class="navbar-brand" href=<%=root_path%> >
+        BabaExpress </a>
       <div id="navbar">
       </div>
       <div "nav navbar-nav navbar-right">
