Implemented basic modal-based product image preview

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require bootstrap
+ *= bootstrap-image-gallery.min.css
+ *= require blueimp-gallery.min
  *= require_tree .
  *= require_self
  */
