--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,7 +1,3 @@
-
-
-div[class="row"]
-  
 <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
 <div id="blueimp-gallery" class="blueimp-gallery">
     <!-- The container for the modal slides -->
@@ -37,10 +33,17 @@ div[class="row"]
         </div>
     </div>
 </div>
+
 #links.col-md-3
-  - @product.pictures.each do |picture|
-    = link_to picture.file.url, data: {gallery: ''}
-       = image_tag picture.file.url(:thumb), class: 'img-responsive'
+  .row
+      = link_to @product.pictures.first.file.url, data: {gallery: ''}
+         = image_tag @product.pictures.first.file.url, class: 'img-responsive'
+
+  .row
+    - @product.pictures.each do |picture|
+      = link_to picture.file.url, data: {gallery: ''}
+         = image_tag picture.file.url(:thumb), class: 'img-responsive'
+
 div[class="col-md-9"]
   h1 =@product.title
 
