--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -40,9 +40,10 @@
          = image_tag @product.pictures.first.file.url, class: 'img-responsive'
 
   .row
-    - @product.pictures.each do |picture|
-      = link_to picture.file.url, data: {gallery: ''}
-         = image_tag picture.file.url(:thumb), class: 'img-responsive'
+    - @product.pictures.each_with_index do |picture, index|
+      - if index > 0
+        = link_to picture.file.url, data: {gallery: ''}
+           = image_tag picture.file.url(:thumb), class: 'img-responsive'
 
 div[class="col-md-9"]
   h1 =@product.title
