--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,20 @@
       <div class="navbar-header"></div>
         <a class="navbar-brand" href=<%=root_path%> >
         BabaExpress </a>
-      <div id="navbar">
-      </div>
-      <div "nav navbar-nav navbar-right">
-      <%= form_tag(products_path, method: :get, class: "navbar-form navbar-right") %>
-        <%= text_field_tag(:query, params[:query], placeholder: 'Search query', class: "form-control") %>
-        <%= submit_tag("Find", class: "btn btn-default") %>
-      </div>
+
+      <ul class="nav navbar-nav navbar-right">
+
+        <li> 
+          <%= link_to("Sign In", new_user_session_path, method: 'get', class: "btn btn-default", id: "sign_in_button") %>
+        </li>
+
+        <li> 
+          <%= form_tag(products_path, method: :get, class: "navbar-form navbar-right") do %>
+            <%= text_field_tag(:query, params[:query], placeholder: 'Search query', class: "form-control") %>
+            <%= submit_tag("Find", class: "btn btn-default") %>
+          <% end %> 
+        </li>
+      </ul> 
     </div>
   </nav>
 
