Implementing comment creation

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -62,9 +62,7 @@ div[class="col-md-9"]
     <div class="panel-footer">Panel footer</div>
   </div>
 
-  = form_tag comments_add_path, class: "form-group"
-    = label 'comment', 'by_user', "Username"
-    = text_field 'comment', 'by_user', class: "form-control"
-    = label 'comment', 'contents' "Comment"
+  = form_tag product_comments_path(@product), class: "form-group"
+    = label 'comment', 'contents', "Comment"
     = text_area 'comment', 'contents', class: 'comment', rows: 5, cols: 115, class: "form-control", placeholder: "Please, enter a comment"
     = submit_tag "Post comment", class: "btn btn-default"
