--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,3 +1,5 @@
+= csrf_meta_tags
+
 <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
 <div id="blueimp-gallery" class="blueimp-gallery">
     <!-- The container for the modal slides -->
