--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,12 @@
         BabaExpress </a>
       <div class="collapse navbar-collapse">
         <div class="nav navbar-form navbar-right">
-          <%= link_to("Sign In", new_user_session_path, method: 'get', class: "btn btn-default", id: "sign_in_button") %>
+          <%- if current_user %>
+            <!--sign out action -->
+            <%= link_to("Sign Out", destroy_user_session_path, method: 'delete', class: "btn btn-default") %>
+          <%- else %>
+            <%= link_to("Sign In", new_user_session_path, method: 'get', class: "btn btn-default") %>
+          <% end %>
         </div>
         <!--ul class="nav navbar-nav"-->
           <%= form_tag(products_path, method: :get, class: "navbar-form navbar-right") do %>
