--- a/app/views/start_page/index.html.slim
+++ b/app/views/start_page/index.html.slim
@@ -1,23 +1,30 @@
 div.row
   div[id="categories" class="row list-group"]
-    div[class="item  col-xs-1 col-lg-1"]
-      b Categories
-    - @all_categories.each do |category|
-      = link_to(products_path + "/?category_id="+category.id.to_s)
-        div[class="item  col-xs-1 col-lg-1"]
-          div.caption
-              = truncate(category.title, length: 23)
-
-
+    div[class="navbar navbar-default"]
+      div[class="container"]
+        div[class="navbar-header"]
+          button[type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"]
+            span[class="sr-only"]
+              Toggle navigation
+            span[class="icon-bar"]
+            span[class="icon-bar"]
+            span[class="icon-bar"]
+          a[class="navbar-brand" href="#"]
+            NavBar
+        div[class="collapse navbar-collapse"]
+          ul[class="nav navbar-nav"]
+            - @all_categories.each do |category|
+                li
+                  a[class="dropdown-toggle" data-toggle="dropdown" href="#"]
+                    = category.title
+                    b[class="caret"]
+                    = render partial: "submenu", locals: {level: "dropdown-menu multi-level", categories: category.categories}
 
 - @categories.each do |category|
   div.row
-
     div[class="well well-sm"]
       = link_to(products_path + "/?category_id="+category.id.to_s)
         strong = category.title
-
-    
     div[id="products#{category.id.to_s}" class="row list-group"]
     - Product.where('get_root_category(category_id)='+category.id.to_s).order('RANDOM()').first(4).each do |product|
       = link_to(product)
