Basic comments implemented, no subcomments yet

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,4 +1,3 @@
-<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
 <div id="blueimp-gallery" class="blueimp-gallery">
     <!-- The container for the modal slides -->
     <div class="slides"></div>
@@ -52,15 +51,21 @@ div[class="col-md-9"]
   div[class="well"]
     = @product.description
 
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Panel title</h3>
+
+  h2 = "Comments"
+
+  - @product.comments.each do |comment|
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">On #{l comment.created_at, format: :short} #{comment.author.email} wrote</h3>
+      </div>
+      <div class="panel-body">
+        =comment.contents
+      </div>
+      <div class="panel-footer">Panel footer</div>
     </div>
-    <div class="panel-body">
-      Panel content
-    </div>
-    <div class="panel-footer">Panel footer</div>
-  </div>
+
+
 
   = form_tag product_comments_path(@product), class: "form-group"
     = label 'comment', 'contents', "Comment"
