--- a/app/views/start_page/index.html.slim
+++ b/app/views/start_page/index.html.slim
@@ -14,11 +14,16 @@ div.row
         div[class="collapse navbar-collapse"]
           ul[class="nav navbar-nav"]
             - @all_categories.each do |category|
-                li
-                  a[class="dropdown-toggle" data-toggle="dropdown" href="#"]
+              - if category.categories.count == 0
+                li[class="active"]
+                  = link_to products_path(category_id: category.id)
+                    = category.title
+              - else
+                li[class="active dropdown-main"]
+                  = link_to products_path(category_id: category.id)
                     = category.title
                     b[class="caret"]
-                    = render partial: "submenu", locals: {level: "dropdown-menu multi-level", categories: category.categories}
+                  = render partial: "submenu", locals: {level: "dropdown-menu multi-level", categories: category.categories}
 
 - @categories.each do |category|
   div.row
