--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -54,7 +54,7 @@ div[class="col-md-9"]
 
   h2 = "Comments"
 
-  = render partial: "comments/comments", locals: {comments: @product.comments}
+  = render partial: "comments/comments", locals: {comments: @product.comments, style: "media-list"}
 
 
   = form_tag product_comments_path(@product), class: "form-group"
