--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         </div>
         <!--ul class="nav navbar-nav"-->
           <%= form_tag(products_path, method: :get, class: "navbar-form navbar-right") do %>
+            <%= hidden_field_tag :category_id, params[:category_id] %>
             <%= text_field_tag(:query, params[:query], placeholder: 'Search query', class: "form-control") %>
             <%= submit_tag("Find", class: "btn btn-default") %>
           <% end %> 
