--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <div class="nav navbar-form navbar-right">
           <%- if current_user %>
             <%= link_to("Sign Out", destroy_user_session_path, method: 'delete', class: "btn btn-default") %>
+            <%= link_to("Edit account", edit_user_registration_path, class: "btn btn-default")  %>
           <%- else %>
             <%= link_to("Sign In", new_user_session_path, method: 'get', class: "btn btn-default") %>
           <% end %>
