changed user session timeout to 15 minute - added picture upload to vendor edit firm - added create vendor action and view

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,6 +47,9 @@
         <%= link_to(vendor.title, vendor_path(id:vendor.id)) %>
       </div>
     <% end %>
+    <div class="row">
+      <%= link_to("New vendor", new_vendor_path)%>
+    </div>
   </div>
 </div>
 
